Improved intersection overlayer plugin to support masks with a different extension from the image and changed color to match standard true positive, false positive, false negative colors. Added test images with different formats and prediction test masks.

--- a/src/bsmu/vision/app/configs/App.conf.yaml
+++ b/src/bsmu/vision/app/configs/App.conf.yaml
@@ -7,8 +7,10 @@ plugins:
   - bsmu.vision.plugins.visualizers.image.flat.FlatImageVisualizerPlugin
 #  - bsmu.vision.plugins.visualizers.image.volume.VolumeImageVisualizerPlugin
   - bsmu.vision.plugins.visualizers.image.layered.LayeredImageVisualizerPlugin
+  - bsmu.vision.plugins.overlayers.image.base.ImageViewerOverlayerPlugin
   - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
 #  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
+  - bsmu.vision.plugins.writers.image.generic.GenericImageFileWriterPlugin
   - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
   - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
 #  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
