--- a/src/bsmu/vision/plugins/overlayers/configs/ImageViewerIntersectionOverlayerPlugin.conf.yaml
+++ b/src/bsmu/vision/plugins/overlayers/configs/ImageViewerIntersectionOverlayerPlugin.conf.yaml
@@ -1,20 +1,12 @@
 layers:
   masks:
-    color: [0, 255, 0, 255]
+    extension: 'png'
+    color: [0, 0, 255, 255]
   predictions:
+    extension: 'png'
     color: [255, 0, 0, 255]
-intersection-layer:
+
+intersection_layer:
   name: intersection
-  color: [255, 255, 0, 255]
+  color: [0, 255, 0, 255]
   opacity: 1
-
-
-#layers:
-#  masks:
-#    color: [255, 255, 0, 255]
-#  predictions:
-#    color: [255, 0, 0, 255]
-#intersection-layer:
-#  name: intersection
-#  color: [0, 255, 0, 255]
-#  opacity: 0.2
