--- a/environment.yaml
+++ b/environment.yaml
@@ -2,63 +2,61 @@ name: vision-py310
 channels:
   - defaults
 dependencies:
-  - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.05.30=haa95532_0
-  - libffi=3.4.4=hd77b12b_0
-  - openssl=3.0.10=h2bbff1b_2
-  - pip=23.2.1=py310haa95532_0
-  - python=3.10.12=he1021f5_0
-  - setuptools=68.0.0=py310haa95532_0
-  - sqlite=3.41.2=h2bbff1b_0
-  - tk=8.6.12=h2bbff1b_0
-  - vc=14.2=h21ff451_1
-  - vs2015_runtime=14.27.29016=h5e58377_2
-  - wheel=0.38.4=py310haa95532_0
-  - xz=5.4.2=h8cc25b3_0
-  - zlib=1.2.13=h8cc25b3_0
+  - bzip2=1.0.8
+  - ca-certificates=2024.3.11
+  - libffi=3.4.4
+  - openssl=3.0.13
+  - pip=24.0
+  - python=3.10.14
+  - setuptools=69.5.1
+  - sqlite=3.45.3
+  - tk=8.6.14
+  - vc=14.2
+  - vs2015_runtime=14.29.30133
+  - wheel=0.43.0
+  - xz=5.4.6
+  - zlib=1.2.13
   - pip:
       - colorama==0.4.6
       - coloredlogs==15.0.1
-      - cx-freeze==6.15.6
-      - cx-logging==3.1.0
-      - exceptiongroup==1.1.3
-      - flatbuffers==23.5.26
+      - cx-freeze==7.1.0.post0
+      - cx-logging==3.2.0
+      - exceptiongroup==1.2.1
+      - flatbuffers==24.3.25
       - humanfriendly==10.0
-      - imageio==2.31.3
+      - imageio==2.34.1
       - iniconfig==2.0.0
-      - lazy-loader==0.3
-      - lief==0.13.2
+      - lazy-loader==0.4
+      - lief==0.14.1
       - mpmath==1.3.0
-      - networkx==3.1
-      - nibabel==5.1.0
-      - numpy==1.25.2
-      - onnxruntime-gpu==1.15.1
-      - opencv-python==4.8.0.76
-      - openslide-python==1.3.0
-      - packaging==23.1
-      - pandas==2.1.0
-      - pillow==10.0.0
-      - pluggy==1.3.0
-      - protobuf==4.24.2
-      - pydicom==2.4.3
+      - networkx==3.3
+      - nibabel==5.2.1
+      - numpy==1.26.4
+      - onnxruntime-gpu==1.18.0
+      - opencv-python==4.10.0.82
+      - packaging==24.0
+      - pandas==2.2.2
+      - pillow==10.3.0
+      - pluggy==1.5.0
+      - protobuf==5.27.0
+      - pydicom==2.4.4
       - pyreadline3==3.4.1
-      - pyside6==6.5.2
-      - pyside6-addons==6.5.2
-      - pyside6-essentials==6.5.2
-      - pytest==7.4.1
-      - python-dateutil==2.8.2
-      - pytz==2023.3.post1
-      - pywavelets==1.4.1
-      - ruamel-yaml==0.17.32
-      - ruamel-yaml-clib==0.2.7
-      - scikit-image==0.21.0
-      - scipy==1.11.2
-      - shiboken6==6.5.2
+      - pyside6==6.7.1
+      - pyside6-addons==6.7.1
+      - pyside6-essentials==6.7.1
+      - pytest==8.2.2
+      - python-dateutil==2.9.0.post0
+      - pytz==2024.1
+      - ruamel-yaml==0.18.6
+      - ruamel-yaml-clib==0.2.8
+      - scikit-image==0.23.2
+      - scipy==1.13.1
+      - shiboken6==6.7.1
       - six==1.16.0
-      - slideio==2.2.0
+      - slideio==2.5.0
       - sortedcontainers==2.4.0
-      - sympy==1.12
-      - tifffile==2023.8.30
+      - sympy==1.12.1
+      - tifffile==2024.5.22
       - toml==0.10.2
       - tomli==2.0.1
-      - tzdata==2023.3
+      - tzdata==2024.1
