--- a/src/bsmu/vision/app/configs/App.conf.yaml
+++ b/src/bsmu/vision/app/configs/App.conf.yaml
@@ -12,10 +12,10 @@ plugins:
   - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
 #  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
   - bsmu.vision.plugins.writers.image.generic.GenericImageFileWriterPlugin
-  - bsmu.vision.plugins.layouts.base.MdiLayoutPlugin
+  - bsmu.vision.plugins.layouts.mdi.MdiLayoutPlugin
   - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
 #  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
-  - bsmu.vision.plugins.tools.viewer.viewer_tool_manager.ViewerToolManagerPlugin
+  - bsmu.vision.plugins.tools.viewer.manager.ViewerToolManagerPlugin
   - bsmu.vision.plugins.tools.viewer.image.hand_tool.HandImageViewerToolPlugin
 #  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
   - bsmu.vision.plugins.tools.viewer.image.wsi_smart_brush.WsiSmartBrushImageViewerToolPlugin
