--- a/src/bsmu/vision/app/configs/App.conf.yaml
+++ b/src/bsmu/vision/app/configs/App.conf.yaml
@@ -1,7 +1,7 @@
 plugins:
   - bsmu.vision.plugins.windows.main.MainWindowPlugin
   - bsmu.vision.plugins.file_dropper.FileDropperPlugin
-  - bsmu.vision.plugins.loaders.image.simple.SimpleImageFileLoaderPlugin
+  - bsmu.vision.plugins.loaders.image.common.CommonImageFileLoaderPlugin
 #  - bsmu.vision.plugins.loaders.image.wsi.WholeSlideImageFileLoaderPlugin
 #  - bsmu.vision.plugins.loaders.nifti.NiftiFileLoaderPlugin
   - bsmu.vision.plugins.post_load_converters.image_to_layered.ImageToLayeredImagePostLoadConverterPlugin
@@ -11,7 +11,7 @@ plugins:
   - bsmu.vision.plugins.overlayers.image.ImageViewerOverlayerPlugin
   - bsmu.vision.plugins.overlayers.path.ImageViewerPathOverlayerPlugin
 #  - bsmu.vision.plugins.overlayers.intersection.ImageViewerIntersectionOverlayerPlugin
-  - bsmu.vision.plugins.writers.image.generic.GenericImageFileWriterPlugin
+  - bsmu.vision.plugins.writers.image.common.CommonImageFileWriterPlugin
   - bsmu.vision.plugins.layouts.mdi.MdiLayoutPlugin
   - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
 #  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
