--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 colorama==0.4.6
 coloredlogs==15.0.1
-cx_Freeze==7.1.0.post0
+cx_Freeze==7.2.3
 cx_Logging==3.2.0
 exceptiongroup==1.2.1
 flatbuffers==24.3.25
