--- a/src/bsmu/vision/configs/default/bsmu.vision/plugins.tools.viewer.image.WsiSmartBrushImageViewerToolPlugin.conf.yaml
+++ b/src/bsmu/vision/configs/default/bsmu.vision/plugins.tools.viewer.image.WsiSmartBrushImageViewerToolPlugin.conf.yaml
@@ -1,11 +1,13 @@
-radius: 600
-min_radius: 4
-max_radius: 2200
+radius: 50
+min_radius: 2
+max_radius: 400
 radius_zoom_factor: 1
 max_radius_without_downscale: 150
 downscale_factor: 1  # (0; 1]
 
 smart_mode_enabled: true
+
+repainting_enabled: true
 
 number_of_clusters: 2
 paint_central_pixel_cluster: true
