--- a/src/bsmu/vision/configs/default/bsmu.vision/plugins.tools.viewer.image.WsiSmartBrushImageViewerToolPlugin.conf.yaml
+++ b/src/bsmu/vision/configs/default/bsmu.vision/plugins.tools.viewer.image.WsiSmartBrushImageViewerToolPlugin.conf.yaml
@@ -10,8 +10,8 @@ smart_mode_enabled: true
 repainting_enabled: true
 
 number_of_clusters: 2
-paint_central_pixel_cluster: true
-paint_dark_cluster: false
+painted_cluster: 'central'  # Possible values: 'dark', 'medium', 'light', 'central' (under mouse pointer),
+  # or a cluster index based on brightness (0 - darkest, (number_of_clusters - 1) - lightest)
 paint_connected_component: true
 
 draw_on_mouse_move: true
