config(palette): Add new visually distinct colors

--- a/src/bsmu/vision/configs/default/bsmu.vision/plugins.palette.PalettePackSettingsPlugin.conf.yaml
+++ b/src/bsmu/vision/configs/default/bsmu.vision/plugins.palette.PalettePackSettingsPlugin.conf.yaml
@@ -1,4 +1,12 @@
 main_palette:
   row_by_name:
-    background: [ 0, 0, 0, 0, 0 ]
-    foreground: [ 1, 50, 170, 230, 255 ]
+    background: [   0,   0,   0,   0,   0 ]
+    foreground: [   1,  50, 170, 230, 255 ]
+    class_2:    [   2, 230, 218,  50, 255 ]
+    class_3:    [   3, 146,  50, 230, 255 ]
+    class_4:    [   4, 230,  50,  98, 255 ]
+    class_5:    [   5,  50, 205,  50, 255 ]
+    class_6:    [   6, 230, 110,  50, 255 ]
+    class_7:    [   7,  50, 230, 182, 255 ]
+    class_8:    [   8,  50,  62, 230, 255 ]
+    class_255:  [ 255,  50,   0,  50, 255 ]
