config(palette): Add risk palette

--- a/src/bsmu/vision/configs/default/bsmu.vision/plugins.palette.PalettePackSettingsPlugin.conf.yaml
+++ b/src/bsmu/vision/configs/default/bsmu.vision/plugins.palette.PalettePackSettingsPlugin.conf.yaml
@@ -10,3 +10,15 @@ main_palette:
     class_7:    [   7,  50, 230, 182, 255 ]
     class_8:    [   8,  50,  62, 230, 255 ]
     class_255:  [ 255,  50,   0,  50, 255 ]
+
+risk_palette:
+  row_by_name:
+    background: [   0,   0,   0,   0,   0 ]
+    foreground: [   1,  50, 205,  50, 255 ]  # Green
+    yellow:     [   2, 230, 218,  50, 255 ]
+    orange:     [   3, 230, 110,  50, 255 ]
+    red:        [   4, 230,  50,  98, 255 ]
+    light_blue: [   5,  50, 170, 230, 255 ]
+    blue:       [   6,  50,  62, 230, 255 ]
+    purple:     [   7, 146,  50, 230, 255 ]
+    class_255:  [ 255,  50,   0,  50, 255 ]
