chore(deps): Update Python to 3.11 and upgrade dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,42 @@
 colorama==0.4.6
 coloredlogs==15.0.1
-cx_Freeze==7.2.3
-cx_Logging==3.2.0
-exceptiongroup==1.2.1
+cx_Freeze==7.2.5
+cx_Logging==3.2.1
 flatbuffers==24.3.25
 humanfriendly==10.0
-imageio==2.34.1
+imageio==2.36.0
+importlib_resources==6.4.5
 iniconfig==2.0.0
 lazy_loader==0.4
-lief==0.14.1
+lief==0.15.1
 mpmath==1.3.0
-networkx==3.3
-nibabel==5.2.1
-numpy==1.26.4
-onnxruntime-gpu==1.18.0
-opencv-python==4.10.0.82
-packaging==24.0
-pandas==2.2.2
-pillow==10.3.0
+networkx==3.4.2
+nibabel==5.3.2
+numpy==2.1.3
+onnxruntime-gpu==1.20.0
+opencv-python==4.10.0.84
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
 pluggy==1.5.0
-protobuf==5.27.0
-pydicom==2.4.4
-pyreadline3==3.4.1
-PySide6==6.7.1
-PySide6_Addons==6.7.1
-PySide6_Essentials==6.7.1
-pytest==8.2.2
+protobuf==5.28.3
+pydicom==3.0.1
+pyreadline3==3.5.4
+PySide6==6.8.0.2
+PySide6_Addons==6.8.0.2
+PySide6_Essentials==6.8.0.2
+pytest==8.3.3
 python-dateutil==2.9.0.post0
-pytz==2024.1
+pytz==2024.2
 ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.8
-scikit-image==0.23.2
-scipy==1.13.1
-shiboken6==6.7.1
+ruamel.yaml.clib==0.2.12
+scikit-image==0.24.0
+scipy==1.14.1
+shiboken6==6.8.0.2
 six==1.16.0
-slideio==2.5.0
+slideio==2.6.3
 sortedcontainers==2.4.0
-sympy==1.12.1
-tifffile==2024.5.22
-toml==0.10.2
-tomli==2.0.1
-tzdata==2024.1
+sympy==1.13.3
+tifffile==2024.9.20
+typing_extensions==4.12.2
+tzdata==2024.2
