--- a/environment.yaml
+++ b/environment.yaml
@@ -1,62 +1,61 @@
-name: vision-py310
+name: vision-py311
 channels:
   - defaults
 dependencies:
   - bzip2=1.0.8=h2bbff1b_6
-  - ca-certificates=2024.3.11=haa95532_0
+  - ca-certificates=2024.9.24=haa95532_0
   - libffi=3.4.4=hd77b12b_1
-  - openssl=3.0.13=h2bbff1b_2
-  - pip=24.0=py310haa95532_0
-  - python=3.10.14=he1021f5_1
-  - setuptools=69.5.1=py310haa95532_0
+  - openssl=3.0.15=h827c3e9_0
+  - pip=24.2=py311haa95532_0
+  - python=3.11.10=h4607a30_0
+  - setuptools=75.1.0=py311haa95532_0
   - sqlite=3.45.3=h2bbff1b_0
   - tk=8.6.14=h0416ee5_0
-  - vc=14.2=h2eaa2aa_1
-  - vs2015_runtime=14.29.30133=h43f2093_3
-  - wheel=0.43.0=py310haa95532_0
+  - vc=14.40=h2eaa2aa_1
+  - vs2015_runtime=14.40.33807=h98bb1dd_1
+  - wheel=0.44.0=py311haa95532_0
   - xz=5.4.6=h8cc25b3_1
   - zlib=1.2.13=h8cc25b3_1
   - pip:
       - colorama==0.4.6
       - coloredlogs==15.0.1
-      - cx-freeze==7.2.3
-      - cx-logging==3.2.0
-      - exceptiongroup==1.2.1
+      - cx-freeze==7.2.5
+      - cx-logging==3.2.1
       - flatbuffers==24.3.25
       - humanfriendly==10.0
-      - imageio==2.34.1
+      - imageio==2.36.0
+      - importlib-resources==6.4.5
       - iniconfig==2.0.0
       - lazy-loader==0.4
-      - lief==0.14.1
+      - lief==0.15.1
       - mpmath==1.3.0
-      - networkx==3.3
-      - nibabel==5.2.1
-      - numpy==1.26.4
-      - onnxruntime-gpu==1.18.0
-      - opencv-python==4.10.0.82
-      - packaging==24.0
-      - pandas==2.2.2
-      - pillow==10.3.0
+      - networkx==3.4.2
+      - nibabel==5.3.2
+      - numpy==2.1.3
+      - onnxruntime-gpu==1.20.0
+      - opencv-python==4.10.0.84
+      - packaging==24.2
+      - pandas==2.2.3
+      - pillow==11.0.0
       - pluggy==1.5.0
-      - protobuf==5.27.0
-      - pydicom==2.4.4
-      - pyreadline3==3.4.1
-      - pyside6==6.7.1
-      - pyside6-addons==6.7.1
-      - pyside6-essentials==6.7.1
-      - pytest==8.2.2
+      - protobuf==5.28.3
+      - pydicom==3.0.1
+      - pyreadline3==3.5.4
+      - pyside6==6.8.0.2
+      - pyside6-addons==6.8.0.2
+      - pyside6-essentials==6.8.0.2
+      - pytest==8.3.3
       - python-dateutil==2.9.0.post0
-      - pytz==2024.1
+      - pytz==2024.2
       - ruamel-yaml==0.18.6
-      - ruamel-yaml-clib==0.2.8
-      - scikit-image==0.23.2
-      - scipy==1.13.1
-      - shiboken6==6.7.1
+      - ruamel-yaml-clib==0.2.12
+      - scikit-image==0.24.0
+      - scipy==1.14.1
+      - shiboken6==6.8.0.2
       - six==1.16.0
-      - slideio==2.5.0
+      - slideio==2.6.3
       - sortedcontainers==2.4.0
-      - sympy==1.12.1
-      - tifffile==2024.5.22
-      - toml==0.10.2
-      - tomli==2.0.1
-      - tzdata==2024.1
+      - sympy==1.13.3
+      - tifffile==2024.9.20
+      - typing-extensions==4.12.2
+      - tzdata==2024.2
