--- a/src/bsmu/vision/configs/default/bsmu.vision/plugins.tools.viewer.image.WsiSmartBrushImageViewerToolPlugin.conf.yaml
+++ b/src/bsmu/vision/configs/default/bsmu.vision/plugins.tools.viewer.image.WsiSmartBrushImageViewerToolPlugin.conf.yaml
@@ -7,10 +7,13 @@ downscale_factor: 1  # (0; 1]
 
 smart_mode_enabled: true
 
-repainting_enabled: true
+repainting:
+  enabled: true
+  mode: 'all'  # Options: 'all' (repaint all classes), 'custom' (repaint custom class)
+  custom_class: 1  # Only relevant if mode is 'custom'
 
 number_of_clusters: 2
-painted_cluster: 'central'  # Possible values: 'dark', 'medium', 'light', 'central' (under mouse pointer),
+painted_cluster: 'central'  # Options: 'dark', 'medium', 'light', 'central' (under mouse pointer),
   # or a cluster index based on brightness (0 - darkest, (number_of_clusters - 1) - lightest)
 paint_connected_component: true
 
