--- a/src/bsmu/vision/configs/default/bsmu.vision/app.App.conf.yaml
+++ b/src/bsmu/vision/configs/default/bsmu.vision/app.App.conf.yaml
@@ -23,6 +23,7 @@ plugins:
   - bsmu.vision.plugins.tools.viewer.image.hand_tool.HandImageViewerToolPlugin
 #  - bsmu.vision.plugins.tools.viewer.image.smart_brush.SmartBrushImageViewerToolPlugin
   - bsmu.vision.plugins.tools.viewer.image.wsi_smart_brush.WsiSmartBrushImageViewerToolPlugin
+#  - bsmu.vision.plugins.tools.viewer.polyline.PolylineViewerToolPlugin
 
   - bsmu.vision.plugins.walkers.file.MdiImageLayerFileWalkerPlugin
 #  - bsmu.vision.plugins.walkers.slice.MdiVolumeSliceWalkerPlugin
